[project]
name = "reflex-spinners"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "reflex>=0.5.5",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["reflex_spinners"]
